AC_INIT([file_manip], [2021.18.6], [kamelghalgaoui7@gmail.com])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PREREQ
AC_CONFIG_HEADERS
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
ACX_PTHREAD
LIBS="$PTHREAD_LIBS $LIBS"
CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
CC="$PTHREAD_CC"
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
